[tool.poetry]
name = "apiregisena"
version = "0.1.0"
description = ""
authors = ["Tu Nombre <espinosa081205@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"  # ¡Cambia esto de 3.13 a 3.10!
flask = "^2.3.3"
gunicorn = "^20.1.0"
flask-mysqldb = "^1.0.1"
flask-cors = "^4.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"